# tennis-origination

./: .gitignore  atp_fixtures.json  australian_open_fixtures.json  cbb_fs_std.ipynb  djokovic_musetti.json  fs_odds_interpreter_std.ipynb  games_won_odds_interpreter_std.ipynb  leagues.json  main.py  markets.json  markets_exp.ipynb  match_exp.ipynb  mise.toml  players.json  prizepicks-oddsjam-python.code-workspace  pyproject.toml  sr_competitions.json  sr_live_summaries.json  sr_season_link.json  sr_season_summaries.json  sr_seasons.json  tennis_fixtures.json
bigquery/: README.md  __init__.py  category_filter_guide.md  client.py  competition_ids_reference.md  create_fixtures_table.py  create_table.py  load_australian_open_fixtures.py  load_australian_open_odds.py  schema.py
sportradar/: README.md  __init__.py  client.py  fetch_sample.py  reference_schema.py
sportradar/reference/: sr_competitions.sql  sr_seasons.sql
